build optimalization for docker image